Update index .html

--- a/index (2).html
+++ b/index (2).html
@@ -11,7 +11,7 @@
 <body>
     <h1>Gesture-Controlled Car Game</h1>
     <div id="car-container">
-        <img id="car" src="C:\Users\Admin\Downloads\Hello-Kitty-21.png" alt="Car">
+        <img id="car" src="Hello-Kitty-21.png" alt="Car">
         <div class="point" id="point"></div>
         <div class="obstacle" id="obstacle"></div>
     </div>
