--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="https://cdn.jsdelivr.net/npm/handtrackjs/dist/handtrack.min.js"></script>
 </head>
 <body>
-    <h1>Gesture-Controlled Car Game</h1>
+    <h1>Gesture-Controlled Game</h1>
     <div id="car-container">
         <img id="car" src="Hello-Kitty-21.png" alt="Car">
         <div class="point" id="point"></div>
